# manga-translation-by-cc

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml
src/manga_translator/: __init__.py  cli.py  config.py  pipeline.py  types.py
src/manga_translator/inpainting/: base.py  simple_inpaint.py
src/manga_translator/ocr/: base.py  easyocr_engine.py
src/manga_translator/rendering/: __init__.py  base.py  text_renderer.py
src/manga_translator/translation/: base.py  claude_translator.py  deepseek_translator.py  openai_translator.py
tests/: test_core.py
