[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manga-translator"
version = "0.1.0"
description = "OCR-based manga/comic translation tool"
authors = [{name = "xpro"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0",
    "easyocr>=1.7",
    "opencv-python>=4.8",
    "Pillow>=10.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
manga-translate = "manga_translator.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.package-dir]
"" = "src"